# Car-Insurance-Claim

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
app/: main.py
data/models/: best_model_lgbm.joblib
data/processed/: test.csv
notebooks/: 001_business_understanding.ipynb  002_data_understanding.ipynb  003_data_preparation.ipynb  004_modeling.ipynb  005_evaluation.ipynb
slides/: prueba_tecnica_juan_baez.pptx
tests/: test_main.py
